--- a/project/requirements.txt
+++ b/project/requirements.txt
@@ -1,3 +1,4 @@
+absl-py==0.7.1
 astor==0.7.1
 dj-database-url==0.5.0
 Django==2.1
@@ -16,7 +17,7 @@ mock==3.0.5
 numpy==1.16.3
 pandas==0.24.2
 protobuf==3.7.1
-psycopg2==2.7.3.2
+psycopg2-binary==2.8.2
 python-dateutil==2.8.0
 pytz==2019.1
 PyYAML==5.1
@@ -24,6 +25,7 @@ scikit-learn==0.21.1
 scipy==1.2.1
 simplejson==3.16.0
 six==1.12.0
+sqlparse==0.3.0
 tb-nightly==1.14.0a20190301
 tensorboard==1.13.1
 tensorflow==1.13.1
